@@ -68,9 +68,10 @@ REQUIREMENTS
   plus Module::Build to build.  It uses DBIx::Class and DBI to talk to a
   database, and therefore the DBIx::Class and DBI modules (and their
   dependencies) and a DBD module for the database it will use must be
-  installed.  The DateTime module is required for date handling, and the
-  SQL::Translator Perl module is also required for schema deployment and
-  database upgrades.  You will also need the DateTime::Format::* module
+  installed.  The Date::Parse (part of the TimeDate distribution) and
+  DateTime modules are required for date handling, and the SQL::Translator
+  Perl module is also required for schema deployment and database
+  upgrades.  You will also need the DateTime::Format::* module
   corresponding to your DBD module (such as DateTime::Format::SQLite or
   DateTime::Format::PG).
 
